tools/crates/vendor/toml_edit/tests/fixtures/invalid/string/multiline-lit-no-close-1.stderr
TOML parse error at line 2, column 20
  |
2 |     this will fail
  |                    ^
invalid multiline literal string
